<resources>
    <string name="app_name">Absolutely Wallpapers</string>

    <string name="wall_url">http://pastebin.com/raw/kEFXe6AE</string>
    <string name="wallpaper_downloaded">Wallpaper was downloaded to: %1$s</string>
    <string name="error">Error</string>
    <string name="no_conn_title">No Connection</string>

    <string name="md_error_label">@string/error</string>
    <string name="md_storage_perm_error">You have not granted the \"Read External Storage\" permission to %1$s, which is needed to complete this action.</string>
    <!--Wallpaper folder path-->
    <string name="walls_save_location">"/Absolutely Walls/Wallpapers/"</string>
    <string name="walls_downloading">Downloading</string>


    <!--About Section -->
    <string name="about_AppDescription">Built by ERC Software and Tushar Parmar \nFor Alex Chaves</string>
    <string name="about_Licensing">All wallpapers are licensed to their original creators and are sourced under the Creative Commons Attribution 4.0 International License (CC By 4.0) \n \nVisit https://creativecommons.org/licenses/by/4.0/ for my info</string>


    <string name="open">open</string>
    <string name="close">close</string>
    <string name="share">Share Theme</string>
    <string name="sendemail">Email Developer</string>
    <string name="changelog">See Changelog</string>

    <string name="nav_all">Anything</string>
    <string name="nav_new">New</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_material">Material</string>
    <string name="nav_landscapes">Landscapes</string>
    <string name="nav_nature">Nature</string>
    <string name="nav_sea">Sea</string>
    <string name="nav_cities">Cities</string>
    <string name="nav_vintage">Vintage</string>
    <string name="nav_others">Others</string>
    <string name="nav_about">About</string>
    <string name="nav_setting">Setting</string>
    <string name="title_activity_settings">Settings</string>

    <string name="new_walls">New Walls Available!</string>
    <string name="added_favorites">Wall added to favorites</string>
    <string name="removed_favorites">Wall removed from favorites</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>

    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>

    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="notif_settings_alert">Notifications</string>
    <string name="notif_settings_vibrate">Vibrate</string>
    <string name="notif_settings_sound">Sound</string>
    <string name="notif_settings_lights">Lights</string>

</resources>
