<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:elevation="0dp">

            <android.support.v7.widget.Toolbar
                android:id="@+id/aboutToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>


        <RelativeLayout
            android:id="@+id/layout1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:paddingLeft="16dp"
            android:layout_weight="0.05">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/app_name"
                android:id="@+id/txtAppName" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:paddingTop="16dp"
                android:layout_below="@id/txtAppName"
                android:text="Version 2.2"
                android:textColor="@color/about_libraries_dividerDark_openSource"
                android:id="@+id/txtAppVersion" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtAppVersion"
                android:textColor="@color/white"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:paddingTop="16dp"
                android:text="@string/about_AppDescription"
                android:id="@+id/txtAppDescription" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:layout_alignTop="@+id/txtAppName"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:src="@mipmap/ic_launcher_aw"
                android:paddingRight="20dp"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingTop="16dp"
            android:text="@string/about_Licensing"
            android:id="@+id/textView" />


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
